@@ -7,6 +7,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -282,7 +283,9 @@ public class EdsmApiClient {
 
     private static String getResponse(StringBuilder query) {
         try {
-            HttpURLConnection conn = (HttpURLConnection) new URL(query.toString()).openConnection();
+            URI uri = URI.create(query.toString());
+            URL url = uri.toURL();
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
 
